# anaconda-goodies

./: LICENSE  README.md  meta.yaml  pyproject.toml
.github/workflows/: publish.yaml
